--- a/python_archive/ipython/swConvTech_part3_2/deep_learning_traffic_light_20101447/ranking.ipynb
+++ b/python_archive/ipython/swConvTech_part3_2/deep_learning_traffic_light_20101447/ranking.ipynb
@@ -79,19 +79,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Model - THIS PART WILL BE REPLACED WITH THE CONTENTS IN model.txt.\n",
     "\n",
-    "contents = open('%s/model.txt' % (base_work_dir), 'r').read()\n",
+    "contents = open('%s/model4.txt' % (base_work_dir), 'r').read()\n",
     "exec(contents)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -127,13 +127,13 @@
      "text": [
       "INFO:tensorflow:Restoring parameters from ../deep_learning_traffic_light_20101447/model.ckpt\n",
       "Model restored.\n",
-      "Accuracy = 1.000000, Time = 0.343163 sec\n",
-      "Slope = 1.457034\n"
+      "Accuracy = 0.818182, Time = 0.340267 sec\n",
+      "Slope = 0.935095\n"
      ]
     }
    ],
    "source": [
-    "# TEST\n",
+    "# TEST ---------------------------------------------------------------------------------\n",
     "zipped_x_y = list(zip(test_x, test_y))\n",
     "conf_true = []\n",
     "conf_pred = []\n",
@@ -149,7 +149,7 @@
     "\n",
     "    for tt in range(0, len(zipped_x_y)):\n",
     "        q = zipped_x_y[tt]\n",
-    "        sfmax = list(sess.run(tf.nn.softmax(y.eval(feed_dict={x: [q[0]],  keep_prob:1.0})))[0])\n",
+    "        sfmax = list(sess.run(tf.nn.softmax(y.eval(feed_dict={x: [q[0]], keep_prob:1.0})))[0])\n",
     "        sf_ind = sfmax.index(max(sfmax))\n",
     "\n",
     "        predicted_label = image_types[sf_ind]\n",
