--- a/python_archive/machineLearning/Object_Detection/SSD-Tensorflow/notebooks/ssd_notebook.ipynb
+++ b/python_archive/machineLearning/Object_Detection/SSD-Tensorflow/notebooks/ssd_notebook.ipynb
@@ -5,7 +5,6 @@
    "execution_count": 1,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
@@ -29,7 +28,6 @@
    "execution_count": 2,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
@@ -47,7 +45,6 @@
    "execution_count": 3,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
@@ -64,7 +61,6 @@
    "execution_count": 4,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
@@ -92,7 +88,6 @@
    "execution_count": 5,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
@@ -110,7 +105,6 @@
    "execution_count": 6,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
@@ -145,7 +139,6 @@
    "execution_count": 7,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.tags": "worksheet-0",
     "scrolled": false,
     "slideshow": {
@@ -218,7 +211,6 @@
    "execution_count": 8,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.tags": "worksheet-0",
     "scrolled": true,
     "slideshow": {
@@ -251,7 +243,6 @@
    "execution_count": 9,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.tags": "worksheet-0",
     "scrolled": false,
     "slideshow": {
@@ -286,6 +277,7 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Python 2",
+   "language": "python",
    "name": "python2"
   },
   "language_info": {
