yasnippet: do, inc, incl modified

--- a/zet_cetera/backup_files/backup_snippets/emacs_snippets/cc-mode/inc.1
+++ b/zet_cetera/backup_files/backup_snippets/emacs_snippets/cc-mode/inc.1
@@ -1,5 +1,5 @@
 # -*- mode: snippet -*-
-# name : #include "..."
-# key  : incl
+# name : #include "..." by edward
+# key  : #in
 # --
 #include "$1"
